SERVER-1390 don't put ClientCursor in shared_ptr